--- a/beagle-fair-dao/pom.xml
+++ b/beagle-fair-dao/pom.xml
@@ -2,12 +2,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <groupId>ch.smartlinksa.intern</groupId>
-    <version>1.0.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>ch.smartlinksa.intern</groupId>
     <artifactId>beagle-fair-dao</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
+    <properties>
+        <spring.version>4.2.4.RELEASE</spring.version>
+        <spring.data.version>1.9.2.RELEASE</spring.data.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring.data.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
