--- a/pom.xml
+++ b/pom.xml
@@ -8,26 +8,36 @@
     <artifactId>beagle-fair</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+
     <modules>
         <module>beagle-fair-webservice</module>
         <module>beagle-fair-business</module>
         <module>beagle-fair-dao</module>
     </modules>
 
+    <properties>
+        <spring.version>4.2.4.RELEASE</spring.version>
+        <spring.data.version>1.9.2.RELEASE</spring.data.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-jpa</artifactId>
+                <version>${spring.data.version}</version>
             </dependency>
         </dependencies>
-
     </dependencyManagement>
 
 </project>
