--- a/beagle-fair-business/pom.xml
+++ b/beagle-fair-business/pom.xml
@@ -15,6 +15,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.smartlinksa.intern</groupId>
+            <artifactId>beagle-fair-dao</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
