--- a/pom.xml
+++ b/pom.xml
@@ -13,18 +13,28 @@
         <module>beagle-fair-business</module>
         <module>beagle-fair-dao</module>
     </modules>
+    <properties>
+        <spring.version>4.2.4.RELEASE</spring.version>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>4.2.4.RELEASE</version>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+            <!-- Json-->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.4.1</version>
             </dependency>
         </dependencies>
 
