--- a/beagle-fair-business/pom.xml
+++ b/beagle-fair-business/pom.xml
@@ -18,7 +18,10 @@
         <dependency>
             <groupId>ch.smartlinksa.intern</groupId>
             <artifactId>beagle-fair-dao</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.smartlinksa.intern</groupId>
+            <artifactId>beagle-fair-interface</artifactId>
         </dependency>
     </dependencies>
 
