--- a/beagle-fair-interface/pom.xml
+++ b/beagle-fair-interface/pom.xml
@@ -8,27 +8,14 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>war</packaging>
-    <artifactId>beagle-fair-webservice</artifactId>
+
+    <artifactId>beagle-fair-interface</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-        </dependency>
-
-        <!-- Add business module-->
-        <dependency>
             <groupId>ch.smartlinksa.intern</groupId>
-            <artifactId>beagle-fair-business</artifactId>
+            <artifactId>beagle-fair-dao</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-        </dependency>
-
     </dependencies>
-
 
 </project>
