--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <spring.data.version>1.9.2.RELEASE</spring.data.version>
         <beagle-fair-dao.version>1.0.0-SNAPSHOT</beagle-fair-dao.version>
         <hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
+        <jackson-databind.version>2.4.1</jackson-databind.version>
     </properties>
 
     <dependencyManagement>
@@ -46,7 +47,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.4.1</version>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.data</groupId>
