--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <spring.version>4.2.4.RELEASE</spring.version>
-        <spring.data.version>1.9.2.RELEASE</spring.data.version>
+        <spring-data.version>1.9.2.RELEASE</spring-data.version>
         <beagle-fair-dao.version>1.0.0-SNAPSHOT</beagle-fair-dao.version>
         <hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
         <jackson-databind.version>2.4.1</jackson-databind.version>
@@ -52,33 +52,8 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>${spring.data.version}</version>
+                <version>${spring-data.version}</version>
             </dependency>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
             <!-- Add dao module-->
             <dependency>
