--- a/beagle-fair-webservice/pom.xml
+++ b/beagle-fair-webservice/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <spring-security.version>4.0.3.RELEASE</spring-security.version>
+        <spring-aspects.version>4.2.4.RELEASE</spring-aspects.version>
     </properties>
     <dependencies>
         <dependency>
@@ -34,6 +35,10 @@
             <artifactId>servlet-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <!-- Add business module-->
         <dependency>
             <groupId>ch.smartlinksa.intern</groupId>
@@ -56,6 +61,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>${spring-aspects.version}</version>
         </dependency>
 
     </dependencies>
