--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
     </modules>
 
     <properties>
-        <spring.version>4.2.4.RELEASE</spring.version>
-        <spring-data.version>1.9.2.RELEASE</spring-data.version>
+        <spring.version>4.1.9.RELEASE</spring.version>
         <beagle-fair-dao.version>1.0.0-SNAPSHOT</beagle-fair-dao.version>
         <hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
         <jackson-databind.version>2.4.1</jackson-databind.version>
@@ -26,6 +25,8 @@
         <fest-assert.version>1.4</fest-assert.version>
         <jsp-api.version>2.1</jsp-api.version>
         <servlet-api.version>2.5</servlet-api.version>
+        <spring-security.version>4.0.0.RELEASE</spring-security.version>
+        <spring-aspects.version>4.2.4.RELEASE</spring-aspects.version>
     </properties>
 
     <dependencyManagement>
@@ -64,11 +65,6 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson-databind.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-jpa</artifactId>
-                <version>${spring-data.version}</version>
-            </dependency>
 
             <!-- Add dao module-->
             <dependency>
@@ -96,6 +92,25 @@
                 <version>${fest-assert.version}</version>
                 <scope>test</scope>
             </dependency>
+            <!--spring security-->
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aspects</artifactId>
+                <version>${spring-aspects.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
