--- a/beagle-fair-config/src/main/resources/database.properties
+++ b/beagle-fair-config/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost/beagle_fair
-db.username=root
-db.password=12345678
+db.url=${db.url}
+db.username=${db.username}
+db.password=${db.password}
