--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Spring Mvc -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
@@ -41,6 +42,20 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+
+            <!--Spring security-->
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+
+            <!-- Web -->
             <dependency>
                 <groupId>javax.servlet.jsp</groupId>
                 <artifactId>jsp-api</artifactId>
@@ -66,11 +81,18 @@
                 <version>${jackson-databind.version}</version>
             </dependency>
 
-            <!-- Add dao module-->
+            <!-- Beagle Fair dao-->
             <dependency>
                 <groupId>ch.smartlinksa.intern</groupId>
                 <artifactId>beagle-fair-dao</artifactId>
                 <version>${beagle-fair-dao.version}</version>
+            </dependency>
+
+            <!-- Spring aspects -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aspects</artifactId>
+                <version>${spring-aspects.version}</version>
             </dependency>
 
             <!-- Test -->
@@ -91,24 +113,6 @@
                 <artifactId>fest-assert</artifactId>
                 <version>${fest-assert.version}</version>
                 <scope>test</scope>
-            </dependency>
-            <!--spring security-->
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-web</artifactId>
-                <version>${spring-security.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-config</artifactId>
-                <version>${spring-security.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-aspects</artifactId>
-                <version>${spring-aspects.version}</version>
             </dependency>
 
         </dependencies>
