create sessionUtil get currentUserId, add validate for PurchaseRequest, update PurchaseController

--- a/beagle-fair-business/pom.xml
+++ b/beagle-fair-business/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>beagle-fair-business</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
         <!-- Spring web -->
         <dependency>
             <groupId>org.springframework</groupId>
