--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
-        <module>beagle-fair-webservice</module>
-        <module>beagle-fair-business</module>
+        <module>beagle-fair-config</module>
         <module>beagle-fair-interface</module>
+        <module>beagle-fair-business</module>
+        <module>beagle-fair-webservice</module>
     </modules>
 
     <properties>
@@ -30,7 +31,7 @@
         <spring-security.version>4.0.0.RELEASE</spring-security.version>
         <spring-aspects.version>4.2.4.RELEASE</spring-aspects.version>
         <spring-test-dbunit.version>1.2.1</spring-test-dbunit.version>
-        <dbunit.version>2.5.1</dbunit.version>
+        <dbunit.version>2.5.0</dbunit.version>
         <powermock.version>1.6.0</powermock.version>
     </properties>
 
@@ -216,6 +217,16 @@
                 <artifactId>dbunit</artifactId>
                 <version>${dbunit.version}</version>
                 <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>junit</artifactId>
+                        <groupId>junit</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>slf4j-api</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
@@ -251,75 +262,75 @@
             </plugin>
 
             <!-- Runs integration tests -->
-            <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>build-helper-maven-plugin</artifactId>-->
-                <!--<version>1.9.1</version>-->
-                <!--<executions>-->
-                    <!--&lt;!&ndash; Add a new source directory to our build &ndash;&gt;-->
-                    <!--<execution>-->
-                        <!--<id>add-integration-test-sources</id>-->
-                        <!--<phase>generate-test-sources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>add-test-source</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--&lt;!&ndash; Configures the source directory of our integration tests &ndash;&gt;-->
-                            <!--<sources>-->
-                                <!--<source>src/integration-test/java</source>-->
-                            <!--</sources>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--&lt;!&ndash; Add a new resource directory to our build &ndash;&gt;-->
-                    <!--<execution>-->
-                        <!--<id>add-integration-test-resources</id>-->
-                        <!--<phase>generate-test-resources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>add-test-resource</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--&lt;!&ndash; Configures the resource directory of our integration tests &ndash;&gt;-->
-                            <!--<resources>-->
-                                <!--&lt;!&ndash;-->
-                                    <!--Placeholders that are found from the files located in the configured resource-->
-                                    <!--directories are replaced with the property values found from the profile-->
-                                    <!--specific configuration file.-->
-                                <!--&ndash;&gt;-->
-                                <!--&lt;!&ndash; Do not change order here !!! &ndash;&gt;-->
-                                <!--<resource>-->
-                                    <!--<directory>${user.dir}/beagle-fair-webservice/src/integration-test/resources-->
-                                    <!--</directory>-->
-                                <!--</resource>-->
-                                <!--<resource>-->
-                                    <!--<filtering>false</filtering>-->
-                                    <!--<directory>${user.dir}/beagle-fair-config/target/classes</directory>-->
-                                <!--</resource>-->
-                            <!--</resources>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-failsafe-plugin</artifactId>-->
-                <!--<version>2.18</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>integration-tests</id>-->
-                        <!--<goals>-->
-                            <!--<goal>integration-test</goal>-->
-                            <!--<goal>verify</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--&lt;!&ndash;-->
-                                <!--Skips integration tests if the value of skip.integration.tests-->
-                                <!--property is true-->
-                             <!--&ndash;&gt;-->
-                            <!--<skipTests>${skip.integration.tests}</skipTests>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.9.1</version>
+                <executions>
+                    <!-- Add a new source directory to our build -->
+                    <execution>
+                        <id>add-integration-test-sources</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Configures the source directory of our integration tests -->
+                            <sources>
+                                <source>src/integration-test/java</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                    <!-- Add a new resource directory to our build -->
+                    <execution>
+                        <id>add-integration-test-resources</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>add-test-resource</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Configures the resource directory of our integration tests -->
+                            <resources>
+                                <!--
+                                    Placeholders that are found from the files located in the configured resource
+                                    directories are replaced with the property values found from the profile
+                                    specific configuration file.
+                                -->
+                                <!-- Do not change order here !!! -->
+                                <resource>
+                                    <directory>${user.dir}/beagle-fair-webservice/src/integration-test/resources
+                                    </directory>
+                                </resource>
+                                <resource>
+                                    <filtering>false</filtering>
+                                    <directory>${user.dir}/beagle-fair-config/target/classes</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.18</version>
+                <executions>
+                    <execution>
+                        <id>integration-tests</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <!--
+                                Skips integration tests if the value of skip.integration.tests
+                                property is true
+                             -->
+                            <skipTests>${skip.integration.tests}</skipTests>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
